Correct actual issue causing mobile overflow
Realise it wasn't text causing the overflow

Still need to reconsider font sizes nontheless

--- a/src/page-styles/globals.css
+++ b/src/page-styles/globals.css
@@ -128,7 +128,8 @@ body {
 }
 
 #root {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   place-content: space-between;
 }
