--- a/src/page-styles/home.module.css
+++ b/src/page-styles/home.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-  font-size: 1em;
+  font-size: 1.2em;
   line-height: 1;
   font-weight: 800;
   letter-spacing: -0.03rem;
@@ -11,14 +11,14 @@
 }
 
 .subtitle {
-  font-size: 0.5em;
+  font-size: 0.6em;
   letter-spacing: -0.015rem;
   margin-bottom: 1rem;
   white-space: nowrap;
 }
 
 .intro {
-  font-size: 0.33em;
+  font-size: 0.4em;
   text-align: center;
   max-width: 32ch;
   margin-block: 1rem;
@@ -131,17 +131,15 @@
 
   .title {
     margin-top: 12.5%;
-    font-size: 1.2em;
   }
 
   .subtitle {
     margin-bottom: 0;
-    font-size: 0.6em;
   }
 
   .intro {
     max-width: 40ch;
-    font-size: 0.28em;
+    font-size: 0.3em;
     margin-top: 0;
   }
 
